Fix for web scanner

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -120,6 +120,7 @@
         <li>Priority fixes & feature requests</li>
       </ul>
       <p><strong>R100 / month</strong></p>
+      <span class="muted">(~$5 approx USD)</span>
       <a
         href="/pro"
         style="
